First working prototype - manage to access server collection from chrome extension, communicate between content scripts and backend script.

--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,24 @@
   "name": "ZenId extension",
   "version": "0.1",
 
+  "permissions": [
+    "webNavigation"
+  ],
+
   "content_scripts": [
     {
       "matches": [
       "http://localhost:3000/list"
         // "<all_urls>"
       ],
-      "js": ["content.js"]
+      "js": ["content.js", "meteor-ddp.js", "jquery-2.2.0.js"]
+    },
+
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": ["credentialFill.js"]
     }
   ],
 
