--- a/manifest.json
+++ b/manifest.json
@@ -2,32 +2,36 @@
   "manifest_version": 2,
   "name": "ZenId extension",
   "version": "0.1",
-
   "permissions": [
     "webNavigation"
   ],
-
   "content_scripts": [
     {
       "matches": [
-      "http://localhost:3000/list"
+        "http://localhost:3000/list",
+        "http://zenid.meteor.com/list"
         // "<all_urls>"
       ],
-      "js": ["content.js", "meteor-ddp.js", "jquery-2.2.0.js"]
+      "js": [
+        "content.js",
+        "meteor-ddp.js",
+        "jquery-2.2.0.js"
+      ]
     },
-
     {
       "matches": [
         "<all_urls>"
       ],
-      "js": ["credentialFill.js"]
+      "js": [
+        "credentialFill.js"
+      ]
     }
   ],
-
-  "background":{
-    "scripts":["background.js"]
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
   },
-
   "browser_action": {
     "default_icon": "icon.png"
   }
