Change indentation from 2 to 4, add run_at option for content_script

--- a/manifest.json
+++ b/manifest.json
@@ -16,15 +16,18 @@
         "content.js",
         "meteor-ddp.js",
         "jquery-2.2.0.js"
-      ]
+      ],
+      "run_at": "document_start"
     },
     {
       "matches": [
         "<all_urls>"
       ],
       "js": [
-        "credentialFill.js"
-      ]
+        "credentialFill.js",
+        "jquery-2.2.0.js"
+      ],
+      "run_at": "document_start"
     }
   ],
   "background": {
