--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,15 @@
   "name": "ZenId extension",
   "version": "0.1",
   "permissions": [
-    "webNavigation"
+    "webNavigation",
+    "tabs"
   ],
+  "background": {
+    "scripts": [
+      "jquery-2.2.0.js",
+      "background.js"
+    ]
+  },
   "content_scripts": [
     {
       "matches": [
@@ -24,17 +31,12 @@
         "<all_urls>"
       ],
       "js": [
-        "credentialFill.js",
-        "jquery-2.2.0.js"
+        "credentialFill.js"
       ],
-      "run_at": "document_start"
+      "run_at": "document_start",
+      "all_frames": true
     }
   ],
-  "background": {
-    "scripts": [
-      "background.js"
-    ]
-  },
   "browser_action": {
     "default_icon": "icon.png"
   }
