--- a/ZenID Extension/manifest.json
+++ b/ZenID Extension/manifest.json
@@ -10,6 +10,7 @@
         "https://*/",
         "http://*/"
     ],
+    "web_accessible_resources": ["resources/loader.gif", "overlay.html"],
     "externally_connectable": {
         "matches": [
             "http://localhost:3000/*",
@@ -17,7 +18,8 @@
         ]
     },
     "browser_action": {
-        "default_icon": "icon.png"
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
     },
     "background": {
         "page": "background.html"
