--- a/ZenID Extension/manifest.json
+++ b/ZenID Extension/manifest.json
@@ -10,7 +10,13 @@
         "https://*/",
         "http://*/"
     ],
-    "web_accessible_resources": ["resources/loader.gif", "overlay.html"],
+    "web_accessible_resources": [
+        "resources/loader.gif",
+        "resources/logo_mono.png",
+        "loader2.gif",
+        "overlay.html",
+        "overlay_complete.html"
+    ],
     "externally_connectable": {
         "matches": [
             "http://localhost:3000/*",
