Adding gulp to support extension live watch && auto minify and uglify scripts

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 360 Extension/
 baidu Extension/
 liebao Extension/
+
+node_modules
+temp
+.tmp
+dist
+.sass-cache
+app/bower_components
+test/bower_components
+package
+app/scripts
