popUp登录的网站，删掉cookie后登录 #2

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -13,6 +13,7 @@
         "webRequest",
         "webRequestBlocking",
         "tabs",
+        "cookies",
         "clipboardWrite",
         "https://*/",
         "http://*/"
