增加chrome版本兼容度, 从31.x 开始 #3, UI changes, transform 添加msTransform和webKitTransform

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ dist
 app/bower_components
 test/bower_components
 package
+Screen Shot 2016-06-11 at 8.31.34 PM.png
+Screen Shot 2016-06-11 at 8.32.18 PM.png
